--- a/libraries/core/pubspec.yaml
+++ b/libraries/core/pubspec.yaml
@@ -19,6 +19,6 @@ dev_dependencies:
   build_runner: ^2.2.1
   
   flutter_lints: ^2.0.0
-  objectbox_generator: any
+  drift_dev: ^2.5.2
   
 flutter:
