--- a/libraries/dependencies/pubspec.yaml
+++ b/libraries/dependencies/pubspec.yaml
@@ -16,10 +16,9 @@ dependencies:
   shared_preferences: ^2.0.18
   flutterando_analysis: ^0.0.2
   dartz: ^0.10.1
-  objectbox: ^1.7.2
   path_provider: ^2.0.13
-  objectbox_flutter_libs: any
   uuid: ^3.0.7
+  drift: ^2.5.0
   
 dev_dependencies:
   flutter_test:
