--- a/libraries/internal_database/pubspec.yaml
+++ b/libraries/internal_database/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   dependencies:
     path: "../dependencies"
+  core:
+    path: "../core"
 
 dev_dependencies:
   flutter_test:
