Priter basics, cart, fix last bills

--- a/libraries/modules/printer/pubspec.yaml
+++ b/libraries/modules/printer/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   core:
     path: "../../core"
+  dependencies:
+    path: "../../dependencies"
 
 dev_dependencies:
   flutter_test:
