--- a/libraries/dependencies/pubspec.yaml
+++ b/libraries/dependencies/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.0.0
   path: ^1.8.2
-  
+  bitmap: ^0.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
