moved printer and fixes, created a pos-printer to test

--- a/libraries/printer/pubspec.yaml
+++ b/libraries/printer/pubspec.yaml
@@ -11,9 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
   core:
-    path: "../../core"
+    path: "../core"
   dependencies:
-    path: "../../dependencies"
+    path: "../dependencies"
 
 dev_dependencies:
   flutter_test:
