--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   
   stock:
     path: libraries/modules/stock
+  
+  esc_printer:
+    path: libraries/modules/esc_printer
 
   internal_database:
     path: libraries/internal_database
