added backup and restore, statistics created repo and datasource

--- a/libraries/modules/statistics/pubspec.yaml
+++ b/libraries/modules/statistics/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
     path: "../../core"
   design_system:
     path: "../../design_system"
+  internal_database:
+    path: "../../internal_database"
 
 
 
