--- a/libraries/dependencies/pubspec.yaml
+++ b/libraries/dependencies/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   path_provider: ^2.0.0
   path: ^1.8.2
   bitmap: ^0.1.3
+  textfield_tags: ^2.0.2
 
 dev_dependencies:
   flutter_test:
