--- a/libraries/dependencies/pubspec.yaml
+++ b/libraries/dependencies/pubspec.yaml
@@ -10,7 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: ^3.2.3
   flutter_modular: ^5.0.3
   flutter_triple: ^1.2.7+4
   shared_preferences: ^2.0.18
@@ -25,6 +24,7 @@ dependencies:
   path: ^1.8.2
   bitmap: ^0.1.3
   textfield_tags: ^2.0.2
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
